@startuml
'https://plantuml.com/sequence-diagram

class Adaptee{
    void beforeAdapter();
}
Interface IAdapter{
    void afterAdapter();
}
class AdapterImpl extends Adaptee implements IAdapter{
    void afterAdapter();
}

class Client{
    Adapter adapter;
}

Client ..> AdapterImpl
Client ..> IAdapter
@enduml